# crams-api

./: .gitignore  README.md
crams-apps/: how_to_dist_source_code.txt  how_to_run_crams_api.txt  requirements.txt  setup_dev_libs.sh
crams-apps/crams_allocation/: README.rst  manage.py  permisisons.py  post.json  pytest.ini  requirements.txt  setup.py  test-requirements.txt
crams-apps/crams_allocation_review/: admin.py  apps.py  models.py  serializers.py  settings.py  urls.py  utils.py
crams-apps/crams_api/: README.rst  manage.py  pytest.ini  requirements.txt  setup.cfg  setup.py
crams-apps/crams_cloud/: README.rst  manage.py  pytest.ini  setup.py
crams-apps/crams_collection/: README.rst  manage.py  pytest.ini  requirements.txt  setup.py  version.py
crams-apps/crams_compute/: README.rst  manage.py  pytest.ini  requirements.txt  setup.py
crams-apps/crams_contact/: .coveragerc  README.rst  (+5 more)
crams-apps/crams_notification/: README.rst  manage.py  pytest.ini  requirements.txt  setup.cfg  setup.py
crams-apps/crams_notification/crams_notification/: asgi.py  celery.py  models.py  settings.py  tasks.py  test_settings.py  urls.py  wsgi.py
crams-apps/crams_notification/crams_notification/mail/: mail_sender.py
crams-apps/crams_notification/crams_notification/utils/: mail_util.py
crams-apps/crams_notification/crams_notification/views/: support_email.py
crams-apps/crams_notification/templates/test_tpl/: submit.tpl
crams-apps/crams_notification/tests/: mail_notification_test.py
crams-apps/crams_review/: README.rst  manage.py  setup.cfg  setup.py  test-requirements.txt
crams-apps/crams_review/crams_review/: admin.py  apps.py  models.py  serializers.py  settings.py  urls.py  utils.py
crams-apps/crams_review/crams_review/config/: review_config.py
crams-apps/crams_review/crams_review/migrations/: 0001_initial.py
crams-apps/crams_review/crams_review/views/: review_date.py  review_send.py  review_skip.py
deployment/: .env.sample  HowToRunDev.txt  docker-compose-dev.yml  docker-compose.yml
(+599 files in other folders)
